--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 29
+    namespace("com.davemorrissey.labs.subscaleview.test")
     defaultConfig {
         minSdkVersion 17
         targetSdkVersion 27
